[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "news-image-generator"
version = "0.1.0"
description = "Local multi-agent pipeline to transform news into thumbnail images."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Pillow>=10.0.0",
  "playwright>=1.53.0",
  "requests>=2.31.0",
]

[project.scripts]
news-image-generator = "news_image_generator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/news_image_generator"]
